Rework class loading